# FastApiVue-AI-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  memory.config.json
backend/: .dockerignore  README.md  alembic.ini  coverage.xml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260610_0205_create_auth_rbac_foundation.py  20260610_0400_create_files_table.py  20260610_0500_create_jobs_tables.py  20260611_0700_create_backup_tables.py
backend/app/: worker.py
backend/app/api/: router.py  url_utils.py
backend/app/auth/: __init__.py  dependencies.py  hashing.py  jwt.py  permissions.py  seed_data.py  service.py
backend/app/core/: application.py  config.py  logging.py  observability.py  rate_limit.py  request_id.py  security_headers.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  backup_log.py  backup_schedule.py  export_job.py  file.py  import_job.py  permission.py  refresh_token.py  role.py  user.py
backend/app/schemas/: __init__.py  auth.py  backup.py  file.py  job.py  (+3 more)
backend/scripts/: seed_auth_rbac.py
backend/tests/: conftest.py  test_audit_log_service.py  test_auth_api_contract.py  test_auth_core.py  test_auth_logout.py  test_auth_rbac_schema.py  test_backup_service.py  test_backups_api.py  test_file_admin_service.py  test_files_api.py  test_hardening_api.py  test_health.py  test_job_admin_service.py  test_jobs_api.py  test_permissions_api.py  test_production_readiness.py  test_rbac_core.py  test_role_admin_service.py  test_roles_api.py  test_user_admin_service.py  test_users_api.py  test_worker_tasks.py
(+153 files in other folders)
