[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fastapivue-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the FastApiVueBoilerplate project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi==0.136.3",
  "httpx>=0.28.0,<1.0.0",
  "minio>=7.2.0,<8.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8.0,<2.0.0",
  "mypy>=1.16.0,<2.0.0",
  "pytest>=9.0.0,<10.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--strict-markers --strict-config --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = ["minio.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B104"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "bandit>=1.8.0,<2.0.0",
  "mypy>=1.16.0,<2.0.0",
  "pytest>=9.0.0,<10.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<1.0.0",
]
